# japanese_numbers_quiz

./: README.md  convert.py  main.py  makefile  pyproject.toml  requirements.txt
templates/: index.html
